# janus

./: .coveragerc  .gitignore  .style.yapf  .travis.yml  CHANGES.rst  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  codeql.yml
janus/: __init__.py  __init__.pyi
mixedqueue/: __init__.py
tests/: test_async.py  test_benchmarks.py  test_mixed.py  test_post_init.py  test_sync.py
