[metadata]
name = janus
version = attr: janus.__version__
url = https://github.com/aio-libs/janus
project_urls =
  Chat: Gitter = https://gitter.im/aio-libs/Lobby
  CI: GitHub Actions = https://github.com/aio-libs/janus/actions/workflows/ci.yml
  Coverage: codecov = https://codecov.io/github/aio-libs/janus
  GitHub: issues = https://github.com/aio-libs/janus/issues
  GitHub: repo = https://github.com/aio-libs/janus
description = Mixed sync-async queue to interoperate between asyncio tasks and classic threads
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Andrew Svetlov <andrew.svetlov@gmail.com>
author_email = andrew.svetlov@gmail.com
license = Apache 2
license_files = LICENSE
classifiers =
  Development Status :: 5 - Production/Stable

  Framework :: AsyncIO

  Intended Audience :: Developers

  License :: OSI Approved :: Apache Software License

  Operating System :: POSIX
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows

  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
  Programming Language :: Python :: 3.13

  Topic :: Software Development :: Libraries

keywords= janus, queue, asyncio

[options]
python_requires = >=3.9
packages = find:
# https://setuptools.readthedocs.io/en/latest/setuptools.html#setting-the-zip-safe-flag
zip_safe = True
include_package_data = True

[flake8]
exclude = .git,.env,__pycache__,.eggs
max-line-length = 88

[tool:pytest]
addopts= --cov-branch --cov-report xml
log_cli=false
log_level=INFO
junit_family=xunit2
asyncio_mode=strict
asyncio_default_fixture_loop_scope=function
filterwarnings=error
    # pytest-asyncio 0.24.0 does't close the event loop for some reason
    # it is the source of unclosed loop and socket warnings
    ignore:unclosed event loop:ResourceWarning
    ignore:unclosed <socket.socket.+>:ResourceWarning
